--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - "STABLE-RELEASE"
-    #  - ".github/workflows/ci-stable-release.yml"
+      - ".github/workflows/ci-stable-release.yml"
 
 jobs:
   push-stable-version:
@@ -38,7 +38,7 @@ jobs:
 
   update-helm-chart:
     name: Update KubeArmor Helm chart version
-    if: github.repository == 'kubearmor/kubearmor'
+      #if: github.repository == 'kubearmor/kubearmor'
     runs-on: ubuntu-20.04
     timeout-minutes: 20
     permissions:
@@ -72,7 +72,9 @@ jobs:
           token: ${{ secrets.GH_ACCESS_TOKEN }}
           charts_dir: deployments
           # repo where charts would be published
-          owner: kubearmor
+          #owner: kubearmor
+          owner: delusionaloptimist
           repository: charts
           branch: gh-pages
-          charts_url: https://kubearmor.github.io/charts
+            #charts_url: https://kubearmor.github.io/charts
+          charts_url: https://delusionaloptimist.github.io/charts
