--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -50,9 +50,10 @@ jobs:
       - name: Update Chart.yaml
         id: update
         run: |
-          echo "STABLE_VERSION=`cat STABLE-RELEASE`" >> $GITHUB_OUTPUT
-          sed -i -e "s/appVersion:.*/appVersion: ${{ steps.update.outputs.STABLE_VERSION }}/g" deployments/helm/Chart.yaml
-          sed -i -e "s/version:.*/version: ${{ steps.update.outputs.STABLE_VERSION }}/g" deployments/helm/Chart.yaml
+          STABLE_VERSION=`cat STABLE-RELEASE`
+          sed -i -e "s/appVersion:.*/appVersion: $STABLE_VERSION/g" deployments/helm/Chart.yaml
+          sed -i -e "s/version:.*/version: $STABLE_VERSION/g" deployments/helm/Chart.yaml
+          echo "STABLE_VERSION=$STABLE_VERSION" >> $GITHUB_OUTPUT
 
       - name: Create PR to update chart version on kubearmor/main
         uses: peter-evans/create-pull-request@v5
