--- a/deployments/helm/Chart.yaml
+++ b/deployments/helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: 
+appVersion: v0.10.2
 description: A Helm chart for Kubearmor on Kubernetes
 home: https://github.com/kubearmor/KubeArmor
 icon: https://github.com/kubearmor/KubeArmor/blob/main/.gitbook/assets/logo.png?raw=true
 name: kubearmor
 type: application
-version: 
+version: v0.10.2
