--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -9,7 +9,8 @@ on:
 jobs:
   publish-chart:
     name: Update Stable Helm Chart With Latest Changes
-    if: ${{ (github.repository == 'kubearmor/kubearmor') && (!contains(github.event.head_commit.message, '[Automated]')) }}
+      #if: ${{ (github.repository == 'kubearmor/kubearmor') && (!contains(github.event.head_commit.message, '[Automated]')) }}
+    if: ${{ (github.repository == 'delusionaloptimist/kubearmor') && (!contains(github.event.head_commit.message, '[Automated]')) }}
     runs-on: ubuntu-20.04
     permissions:
       contents: write
