--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - "STABLE-RELEASE"
-      - ".github/workflows/ci-stable-release.yml"
+      # - ".github/workflows/ci-stable-release.yml"
 
 jobs:
   push-stable-version:
@@ -55,7 +55,7 @@ jobs:
           sed -i -e "s/version:.*/version: $STABLE_VERSION/g" deployments/helm/Chart.yaml
           echo "STABLE_VERSION=$STABLE_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Update Helm chart version in KubeArmor repo
+      - name: Create PR to update Helm chart version in KubeArmor repo
         uses: peter-evans/create-pull-request@v5
         with:
           branch: update-helm-${{ steps.update.outputs.STABLE_VERSION }}
@@ -65,17 +65,3 @@ jobs:
           base: main
           signoff: true
           delete-branch: true
-
-      - name: Publish Helm chart
-        uses: stefanprodan/helm-gh-pages@master
-        with:
-          # Access token which can push to a different repo in the same org
-          token: ${{ secrets.GH_ACCESS_TOKEN }}
-          charts_dir: deployments
-          # repo where charts would be published
-          #owner: kubearmor
-          owner: delusionaloptimist
-          repository: charts
-          branch: gh-pages
-            #charts_url: https://kubearmor.github.io/charts
-          charts_url: https://delusionaloptimist.github.io/charts
