publish chart only using latest releaser
Signed-off-by: Rudraksh Pareek <rudraksh@accuknox.com>

--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - "STABLE-RELEASE"
-      # - ".github/workflows/ci-stable-release.yml"
+      - ".github/workflows/ci-stable-release.yml"
 
 jobs:
   push-stable-version:
