--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -61,8 +61,8 @@ jobs:
           branch: update-helm-${{ steps.update.outputs.STABLE_VERSION }}
           add-paths: "deployments/helm/Chart.yaml"
           commit-message: "[skip ci] Update Helm Chart To ${{ steps.update.outputs.STABLE_VERSION }}"
-          committer: "github-actions[bot] github-actions[bot]@users.noreply.github.com"
-          author: "github-actions[bot] github-actions[bot]@users.noreply.github.com"
+          committer: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
           title: "[skip ci] Update Helm Chart To ${{ steps.update.outputs.STABLE_VERSION }}"
           base: main
           signoff: true
