--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   publish-chart:
     name: Update Stable Helm Chart With Latest Changes
-    if: ${{ (github.repository == 'kubearmor/kubearmor') && (!contains(github.event.head_commit.message, '[skip ci]')) }}
+      #if: ${{ (github.repository == 'kubearmor/kubearmor') && (!contains(github.event.head_commit.message, '[skip ci]')) }}
     runs-on: ubuntu-20.04
     permissions:
       contents: write
@@ -36,9 +36,11 @@ jobs:
           token: ${{ secrets.GH_ACCESS_TOKEN }}
           charts_dir: deployments
           # repo where charts would be published
-          owner: kubearmor
+          #owner: kubearmor
+          owner: delusionaloptimist
           repository: charts
           branch: main
-          charts_url: https://kubearmor.github.io/charts
+            #charts_url: https://kubearmor.github.io/charts
+          charts_url: https://delusionaloptimist.github.io/charts
           commit_username: "github-actions[bot]"
           commit_email: "github-actions[bot]@users.noreply.github.com"
