check latest release chart publisher
Signed-off-by: Rudraksh Pareek <rudraksh@accuknox.com>

--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -2,7 +2,7 @@ name: ci-latest-helm-chart-release
 
 on:
   push:
-    branches: [main]
+    #branches: [main]
     paths:
       - "deployments/helm/**"
 
