--- a/.github/workflows/ci-test-controllers.yml
+++ b/.github/workflows/ci-test-controllers.yml
@@ -2,8 +2,8 @@ name: ci-test-controllers
 
 on:
   pull_request:
-    branches:
-      - "main"
+    #branches:
+    #  - "main"
     paths:
       - "pkg/**"
       - ".github/workflows/ci-test-controllers.yml"
