--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           # Access token which can push to a different repo in the same org
           token: ${{ secrets.GH_ACCESS_TOKEN }}
-          charts_dir: deployments
+          charts_dir: deployments/helm
           # repo where charts would be published
           #owner: kubearmor
           owner: delusionaloptimist
