--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -63,7 +63,9 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           branch: update-helm-${{ steps.update.outputs.STABLE_VERSION }}
-          add-paths: "deployments/helm/KubeArmor/Chart.yaml", "deployments/helm/KubeArmorOperator/Chart.yaml"
+          add-paths: |
+            "deployments/helm/KubeArmor/Chart.yaml"
+            "deployments/helm/KubeArmorOperator/Chart.yaml"
           commit-message: "[skip ci] Update Helm Chart To ${{ steps.update.outputs.STABLE_VERSION }}"
           committer: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
           author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
