stable release wf update
Signed-off-by: Rudraksh Pareek <rudraksh@accuknox.com>

--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -2,7 +2,7 @@ name: ci-stable-release
 
 on:
   push:
-    branches: [main]
+    #branches: [main]
     paths:
       - "STABLE-RELEASE"
     #  - ".github/workflows/ci-stable-release.yml"
