--- a/KubeArmor/Makefile
+++ b/KubeArmor/Makefile
@@ -57,7 +57,9 @@ run-container: build
 	cd $(CURDIR); sudo rm -f /tmp/kubearmor.log
 	cd $(CURDIR)/BPF; make clean
 	cd $(CURDIR)/BPF; make
-	cd $(CURDIR); sudo -E ./kubearmor -stateAgentAddr="localhost:8801" -logPath=/tmp/kubearmor.log -enableKubeArmorHostPolicy -enableKubeArmorPolicy -k8s=false -enableStateAgent=true
+	#cd $(CURDIR); sudo -E ./kubearmor -logPath=/tmp/kubearmor.log -enableKubeArmorHostPolicy -enableKubeArmorPolicy -k8s=false -gRPC=32768 -relayServerURL=localhost:32767
+	#cd $(CURDIR); sudo -E ./kubearmor -logPath=/tmp/kubearmor.log -enableKubeArmorPolicy -enableKubeArmorHostPolicy -k8s=false -enableReverseGRPC -relayServerURL=localhost:32768
+	cd $(CURDIR); sudo -E DEBUG=true ./kubearmor -logPath=/tmp/kubearmor.log -enableKubeArmorPolicy -enableKubeArmorHostPolicy -k8s=false -enableReverseGRPC -relayServerURL=localhost:32768 -enableStateAgent=true -stateAgentAddr=localhost:32769
 
 .PHONY: run-host-only
 run-host-only: build
