--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -31,25 +31,27 @@ jobs:
           sed -i -e "s/appVersion:.*/appVersion: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
           sed -i -e "s/version:.*/version: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
-        with:
-          charts_dir: deployments/helm
-        env:
-          CR_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
-          CR_OWNER: delusionaloptimist
-          CR_GIT_REPO: charts
-
-            #- name: Publish Helm chart
-            #  uses: stefanprodan/helm-gh-pages@master
+            #- name: Run chart-releaser
+            #  uses: helm/chart-releaser-action@v1.6.0
             #  with:
-            #    # Access token which can push to a different repo in the same org
-            #    token: ${{ secrets.GH_ACCESS_TOKEN }}
             #    charts_dir: deployments/helm
-            #    # repo where charts would be published
-            #    owner: kubearmor
-            #    repository: charts
-            #    branch: gh-pages
-            #    charts_url: https://kubearmor.github.io/charts
-            #    commit_username: "github-actions[bot]"
-            #    commit_email: "github-actions[bot]@users.noreply.github.com"
+            #  env:
+            #    CR_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
+            #    CR_OWNER: delusionaloptimist
+            #    CR_GIT_REPO: charts
+
+      - name: Publish Helm chart
+        uses: stefanprodan/helm-gh-pages@master
+        with:
+          # Access token which can push to a different repo in the same org
+          token: ${{ secrets.GITHUB_TOKEN }}
+          charts_dir: deployments/helm
+          # repo where charts would be published
+          #owner: kubearmor
+          owner: delusionaloptimist
+          repository: charts
+          branch: gh-pages
+            #charts_url: https://kubearmor.github.io/charts
+          charts_url: https://delusionaloptimist.github.io/charts
+          commit_username: "github-actions[bot]"
+          commit_email: "github-actions[bot]@users.noreply.github.com"
