--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Update Chart.yaml
         run: |
+          git config --global url."https://${{ secrets.GH_PAT_NEW }}:@github.com/".insteadOf "https://github.com/"
           STABLE_VERSION=`cat STABLE-RELEASE`
           sed -i -e "s/appVersion:.*/appVersion: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
           sed -i -e "s/version:.*/version: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
@@ -44,7 +45,7 @@ jobs:
         uses: stefanprodan/helm-gh-pages@master
         with:
           # Access token which can push to a different repo in the same org
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT_NEW }}
           charts_dir: deployments/helm
           # repo where charts would be published
           #owner: kubearmor
