--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -25,9 +25,14 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+            #- name: Login with GitHub CLI
+            #  run: |
+            #    cat << EOF | gh auth login --with-token
+            #    ${{ secrets.GH_PAT_NEW }}
+            #    EOF
+
       - name: Update Chart.yaml
         run: |
-          git config --global url."https://${{ secrets.GH_PAT_NEW }}:@github.com/".insteadOf "https://github.com/"
           STABLE_VERSION=`cat STABLE-RELEASE`
           sed -i -e "s/appVersion:.*/appVersion: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
           sed -i -e "s/version:.*/version: $STABLE_VERSION/g" deployments/helm/*/Chart.yaml
