--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -33,9 +33,10 @@ jobs:
 
       - name: Publish Helm chart
         uses: delusionaloptimist/helm-gh-pages@master
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT_NEWEST }}
         with:
           # Access token which can push to a different repo in the same org
-          token: ${{ secrets.GH_PAT_NEWEST }}
           charts_dir: deployments/helm
           # repo where charts would be published
           #owner: kubearmor
